--- a/StudyNetMVC.WEB/Views/Home/Index.cshtml
+++ b/StudyNetMVC.WEB/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "Login";
 }
-<script src="~/Scripts/jquery-3.3.1.js"></script>
-<script src="~/Content/layer/layer.js"></script>
+<link href="~/Content/myCss.css" rel="stylesheet" />
 <div class="row">
     <div class="col-md-3">
 
