--- a/StudyNetMVC.WEB/Views/Home/Index.cshtml
+++ b/StudyNetMVC.WEB/Views/Home/Index.cshtml
@@ -41,14 +41,14 @@
                                     </div>
 
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-4 col-md-offset-2">
+                                <div class="row" style="height:20px;">
+                                    @*<div class="col-md-4 col-md-offset-2">
                                         <div class="checkbox">
                                             <label>
                                                 <input type="checkbox"> 记住密码
                                             </label>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-1 col-md-offset-2">
@@ -97,14 +97,14 @@
                                     </div>
 
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-4 col-md-offset-2">
+                                <div class="row" style="height:20px;">
+                                    @*<div class="col-md-4 col-md-offset-2">
                                         <div class="checkbox">
                                             <label>
                                                 <input type="checkbox"> 记住密码
                                             </label>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-1 col-md-offset-2">
