md5加密处理（后端），优化添加或注册流程

--- a/StudyNetMVC.WEB/Views/Shared/_Layout.cshtml
+++ b/StudyNetMVC.WEB/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/layer")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/md5")
     @Scripts.Render("~/bundles/myjs")
     @*@RenderSection("scripts", required: false)*@
     <div class="container body-content">
