添加修改密码

--- a/StudyNetMVC.WEB/Views/Shared/_Layout.cshtml
+++ b/StudyNetMVC.WEB/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <li class="dropdown" id="personalCenter" style="display:none">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">个人中心 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">修改密码</a></li>
+                            <li id="modifyPass"><a href="#">修改密码</a></li>
                             <li id="exit"><a href="#">安全退出</a></li>
                         </ul>
                     </li>
